# mc-hardcore-manager

./: .clinerules  .gitignore  README.md  config.example.yaml  data.yaml  pyproject.toml
src/mc_hardcore_manager/: __init__.py  config.py  main.py
src/mc_hardcore_manager/cogs/: server_cog_helpers.py
src/mc_hardcore_manager/core/: data_manager.py  exceptions.py  utils.py
src/mc_hardcore_manager/death_handling/: __init__.py  actions.py  analyzer.py  handler.py
src/mc_hardcore_manager/discord_bot/: __init__.py
src/mc_hardcore_manager/discord_bot/cogs/: server_cog.py  stats_cog.py
src/mc_hardcore_manager/discord_bot/views/: __init__.py  death_reset_confirmation_view.py  reset_confirmation_view.py
src/mc_hardcore_manager/minecraft/: __init__.py  death_event_dispatcher.py  death_patterns.py  log_monitor.py  rcon_client.py  scoreboard_manager.py  server_process_manager.py  world_manager.py
